--- a/client/src/pages/Inspections.css
+++ b/client/src/pages/Inspections.css
@@ -7,6 +7,7 @@
   max-width: 100vw;
   overflow-x: hidden;
   box-sizing: border-box;
+  position: relative;
 }
 
 .page-header {
